// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberInput /> spec renders the component 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <label
      class="label "
      for="numberInputTestId"
    >
      Test label number input
    </label>
    <div
      class="inputWrapper"
    >
      <div
        class="numberInputContainer"
      >
        <input
          aria-describedby="numberInputTestId-helper numberInputTestId-error"
          class="input"
          id="numberInputTestId"
          type="number"
          value=""
        />
      </div>
    </div>
    <div
      class="errorText"
      id="numberInputTestId-error"
    >
      Error text
    </div>
    <div
      class="helperText"
      id="numberInputTestId-helper"
    >
      Helper text
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NumberInput /> spec renders the component with steppers 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <label
      class="label "
      for="numberInputTestId"
      id="numberInputTestId-label"
    >
      Test label number input
    </label>
    <div
      class="inputWrapper"
    >
      <div
        aria-labelledby="numberInputTestId-label"
        class="numberInputContainer"
        role="group"
      >
        <input
          aria-describedby="numberInputTestId-helper numberInputTestId-error"
          class="input numberInputWithSteps"
          id="numberInputTestId"
          step="10"
          type="number"
          value=""
        />
        <div
          class="minusButtonWrapper"
        >
          <button
            aria-label="Decrease 10 euros"
            class="button"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="minus"
              class="icon small"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6 11H18V13H6V11Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="plusButtonWrapper"
        >
          <button
            aria-label="Add 10 euros"
            class="button"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="plus"
              class="icon small"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M13 6V11H18V13H13V18H11V13H6V11H11V6H13Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="errorText"
      id="numberInputTestId-error"
    >
      Error text
    </div>
    <div
      class="helperText"
      id="numberInputTestId-helper"
    >
      Helper text
    </div>
  </div>
</DocumentFragment>
`;
